--- a/Practica0/Datos.ipynb
+++ b/Practica0/Datos.ipynb
@@ -2,27 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n"
+    "# Importamos Librerias\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Clase para leer y almacenar los datos de los ficheros .data proporcionados\n",
+    "\"\"\"\n",
+    "\n",
     "class Datos(object):\n",
     "\n",
-    " TiposDeAtributos=('Continuo','Nominal')\n",
+    "    TiposDeAtributos=('Continuo','Nominal')\n",
     "\n",
-    " def __init__(self, nombreFichero):\n",
+    "    def __init__(self, nombreFichero):\n",
     "        \n",
     "        # Abrimos el fichero y procesamos la cabecera\n",
     "        with open(nombreFichero) as f:\n",
@@ -41,58 +43,50 @@
     "                raise ValueError(\"Tipo de atributo erroneo\")\n",
     "                \n",
     "            # Guardamos True en las posiciones de atributos nominales\n",
-    "            self.nominalAtributos = [True if atr == 'Nominal' else False for atr in self.tipoAtributos]\n",
+    "            self.nominalAtributos = [atr == 'Nominal' for atr in self.tipoAtributos]\n",
     "            \n",
-    "        # Leemos los datos de numpy     \n",
-    "        self.datos = np.genfromtxt(nombreFichero, dtype='S', skip_header=3, delimiter=',')\n",
+    "        # Leemos los datos de numpy en formate string para los datos nominales\n",
+    "        datosNominales = np.genfromtxt(nombreFichero, dtype='S', skip_header=3, delimiter=',')\n",
     "            \n",
+    "        # Inicializamos los diccionarios con los distintos valores de los atributos\n",
+    "        self._inicializarDiccionarios(datosNominales)\n",
     "        \n",
-    "        # Buscamos en la matriz los posibles valores de cada atributo\n",
+    "        # Transformamos los datos nominales en datos numericos empleando los diccionarios\n",
+    "        \n",
+    "        \n",
+    "    def _inicializarDiccionarios(self, datos):\n",
+    "        \"\"\"Funcion interna para inicializar los diccionarios buscando todos\n",
+    "            los valores que toman los atributos en la matriz de datos\"\"\"\n",
+    "\n",
     "        self.diccionarios = []\n",
-    "        \n",
-    "        for i in range(len(self.nominalAtributos)):\n",
-    "            if not self.nominalAtributos[i]:\n",
+    "\n",
+    "        for i, nominal in enumerate(self.nominalAtributos):\n",
+    "\n",
+    "            if not nominal: # Incluimos diccionarios vacios en los datos no nominales\n",
     "                self.diccionarios.append({})\n",
     "            else:\n",
-    "                values = []\n",
-    "                # Recorremos los atributos buscando diferentes valores\n",
-    "                for v in self.datos[:,i]:\n",
-    "                    if v not in values: values.append(v)\n",
-    "                        \n",
-    "                # Lista ordenada de valores del atributo\n",
+    "                # Buscamos todos los valores distintos por atributo y creamos el diccionario\n",
+    "                values = np.unique(datos[:,i])\n",
     "                values.sort()\n",
-    "                \n",
-    "                #for j in range(len(values))\n",
     "                self.diccionarios.append({k.decode('utf-8'): v for v, k in enumerate(values)})\n",
-    "                        \n",
+    "\n",
     "        \n",
     "\n",
-    " # TODO: implementar en la practica 1\n",
-    " def extraeDatos(self, idx):\n",
-    "     pass"
+    "     # TODO: implementar en la practica 1\n",
+    "    def extraeDatos(self, idx):\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'b': 0, 'o': 1, 'x': 2}, {'b': 0, 'o': 1, 'x': 2}, {'b': 0, 'o': 1, 'x': 2}, {'b': 0, 'o': 1, 'x': 2}, {'b': 0, 'o': 1, 'x': 2}, {'b': 0, 'o': 1, 'x': 2}, {'b': 0, 'o': 1, 'x': 2}, {'b': 0, 'o': 1, 'x': 2}, {'b': 0, 'o': 1, 'x': 2}, {'negative': 0, 'positive': 1}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    #from Datos import Datos\n",
-    "    dataset=Datos('./ConjuntosDatos/tic-tac-toe.data')\n",
-    "    \n",
-    "    print(dataset.diccionarios)"
+    "    dataset=Datos('../ConjuntosDatos/tic-tac-toe.data')\n"
    ]
   }
  ],
@@ -112,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
