--- a/Practica0/Datos.ipynb
+++ b/Practica0/Datos.ipynb
@@ -2,8 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/python3\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\n",
+    "# Pablo Marcos y Dionisio Perez"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Importamos Librerias\n",
@@ -12,19 +28,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Clase para leer y almacenar los datos de los ficheros .data proporcionados\n",
-    "\"\"\"\n",
     "\n",
     "class Datos(object):\n",
+    "    \"\"\"Clase para leer y almacenar los datos de los ficheros .data proporcionados\n",
+    "        \n",
+    "    Attributes:\n",
+    "        ndatos (int): Numero de entradas de nuestro conjunto de datos\n",
+    "        nAtributos (int): Numero de atributos de cada dato\n",
+    "        nombreAtributos (list): Lista con los nombres de los atributos\n",
+    "        tipoAtributos (list): Lista con string representando el tipo de cada atributo\n",
+    "        nominalAtributos (list): Lista con True en las posiciones de los atributos nominales\n",
+    "        diccionarios (list): Lista de diccionarios con el valor de cada uno de los atributos nominales\n",
+    "        datos (numpy.ndarray) : Matrix ndatosxnAtributos con los datos recolectados y los atributos\n",
+    "            nominales traducidos.\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
     "\n",
     "    TiposDeAtributos=('Continuo','Nominal')\n",
     "\n",
-    "    def __init__(self, nombreFichero):\n",
+    "    def __init__(self, nombreFichero, cast=None):\n",
+    "        \"\"\"Constructor de la clase Datos\n",
+    "        \n",
+    "        Args:\n",
+    "            nombreFichero (str): path del fichero de datos a cargar\n",
+    "            cast (np.dtype, opcional) : Si se especifica la matriz de datos se \n",
+    "                casteara al tipo especificado, en otro caso si todos los atributos \n",
+    "                son nominales se almacenaran en tipo entero y si hay algun dato \n",
+    "                continuo en tipo float.\n",
+    "        \"\"\"\n",
     "        \n",
     "        # Abrimos el fichero y procesamos la cabecera\n",
     "        with open(nombreFichero) as f:\n",
@@ -37,6 +74,9 @@
     "            \n",
     "            # Guardamos la lista de atributos\n",
     "            self.tipoAtributos = f.readline().replace('\\n','').split(\",\")\n",
+    "            \n",
+    "            # Numero de atributos\n",
+    "            self.nAtributos = len(self.tipoAtributos)\n",
     "            \n",
     "            # Comprobacion atributos\n",
     "            if any(atr not in Datos.TiposDeAtributos for atr in self.tipoAtributos):\n",
@@ -52,7 +92,24 @@
     "        self._inicializarDiccionarios(datosNominales)\n",
     "        \n",
     "        # Transformamos los datos nominales en datos numericos empleando los diccionarios\n",
+    "        for i, nominal in enumerate(self.nominalAtributos):\n",
+    "            if nominal:\n",
+    "                datosNominales[:,i] = np.vectorize(self.diccionarios[i].get)(datosNominales[:,i])\n",
+    "                \n",
+    "        # Convertimos la matriz a tipo numerico, en caso de no especificarse\n",
+    "        # Si todos los atributos son nominales usamos el tipo np.int para ahorrar espacio\n",
+    "        # Si hay datos continuos lo guardamos en tipo np.float\n",
+    "        if cast == None: cast = np.int if all(self.nominalAtributos) else np.float\n",
+    "        self.datos = datosNominales.astype(cast)\n",
     "        \n",
+    "        # Convertimos los nombres nominales a string en vez de dejarlos en bytes\n",
+    "        diccionarios_aux = []\n",
+    "        for d in self.diccionarios:\n",
+    "            aux = {}\n",
+    "            for k in d: aux[k.decode('utf-8')] = d[k]\n",
+    "            diccionarios_aux.append(aux)\n",
+    "                \n",
+    "        self.diccionarios = diccionarios_aux\n",
     "        \n",
     "    def _inicializarDiccionarios(self, datos):\n",
     "        \"\"\"Funcion interna para inicializar los diccionarios buscando todos\n",
@@ -68,7 +125,7 @@
     "                # Buscamos todos los valores distintos por atributo y creamos el diccionario\n",
     "                values = np.unique(datos[:,i])\n",
     "                values.sort()\n",
-    "                self.diccionarios.append({k.decode('utf-8'): v for v, k in enumerate(values)})\n",
+    "                self.diccionarios.append({k: v for v, k in enumerate(values)})\n",
     "\n",
     "        \n",
     "\n",
@@ -79,14 +136,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "if __name__ == '__main__':\n",
-    "    #from Datos import Datos\n",
-    "    dataset=Datos('../ConjuntosDatos/tic-tac-toe.data')\n"
+    "    dataset=Datos('../ConjuntosDatos/tic-tac-toe.data')\n",
+    "    #dataset=Datos('../ConjuntosDatos/german.data', int)\n",
+    "    #dataset = Datos('../ConjuntosDatos/balloons.data')\n"
    ]
   }
  ],
@@ -106,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
