--- a/Practica1/Practica1.ipynb
+++ b/Practica1/Practica1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
@@ -14,12 +14,14 @@
     "# Pablo Marcos y Dionisio Perez\n",
     "\n",
     "# Importamos Librerias\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import collections\n",
+    "from abc import ABCMeta,abstractmethod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -125,14 +127,20 @@
     "    \n",
     "    def __len__(self):\n",
     "        return self.nDatos\n",
+    "    \n",
+    "    def __yield__(self):\n",
+    "        for i in range(len(self)):\n",
+    "            yield self.datos[i]\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from abc import ABCMeta,abstractmethod\n",
@@ -140,9 +148,12 @@
     "\n",
     "class Particion:\n",
     "  \n",
-    "  def __init__(self, train=[], test=[]):\n",
-    "    self.indicesTrain= train\n",
-    "    self.indicesTest= test\n",
+    "    def __init__(self, train=[], test=[]):\n",
+    "        self.indicesTrain= train\n",
+    "        self.indicesTest= test\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"Particion:\\nTrain: {}\\nTest:  {}\".format(str(self.indicesTrain),str(self.indicesTest)) \n",
     "\n",
     "#####################################################################################################\n",
     "\n",
@@ -158,6 +169,10 @@
     "    \n",
     "    def __call__(self, datos):\n",
     "        return self.creaParticiones(datos)\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        for part in self.particiones:\n",
+    "            yield part\n",
     "  \n",
     "    @abstractmethod\n",
     "    # TODO: esta funcion deben ser implementadas en cada estrategia concreta  \n",
@@ -203,7 +218,6 @@
     "  # El conjunto de entrenamiento se crea con las nfolds-1 particiones\n",
     "  # y el de test con la particion restante\n",
     "  # Esta funcion devuelve una lista de particiones (clase Particion)\n",
-    "  # TODO: implementar\n",
     "    def creaParticiones(self,datos,seed=None):   \n",
     "        np.random.seed(seed)\n",
     "        \n",
@@ -217,10 +231,10 @@
     "        self.particiones = []\n",
     "        \n",
     "        \n",
-    "        for i in range(k):\n",
+    "        for i in range(self.k):\n",
     "\n",
-    "            train = np.delete(indices, range(i*k,(k+1)*l))\n",
-    "            test =  indices[k*l:(k+1)*l]\n",
+    "            train = np.delete(indices, range(i*l,(i+1)*l))\n",
+    "            test =  indices[i*l:(i+1)*l-1]\n",
     "            self.particiones.append(Particion(train, test))\n",
     "                                    \n",
     "        return self.particiones\n",
@@ -253,7 +267,8 @@
     "            # Nos quedamos los ejemplos de los indices\n",
     "            train = indices[aleatorios]\n",
     "            # Obtenemos los indices que han sido excluidos\n",
-    "            excluidos = [i not in aleatorios for i in indices]\n",
+    "            excluidos = [i not in aleatorios for i in indices] \n",
+    "            \n",
     "            # El conjunto de indices esta formado por los indices excluidos\n",
     "            test = indices[excluidos]\n",
     "\n",
@@ -264,11 +279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prueba de las particiones\n",
+    "# Prueba de los metodos de particiones de la semana1\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    \n",
@@ -279,13 +294,169 @@
     "    # Creamos una particion con validacion simple\n",
     "    validacion1 = ValidacionSimple(0.8)\n",
     "    particion1 = validacion1(dataset)\n",
-    "\n",
+    "    \n",
+    "    # Creamos una particion con validacion cruzada\n",
+    "    k=4\n",
+    "    validacion2 = ValidacionCruzada(k)\n",
+    "    particion2 = validacion2(dataset)\n",
+    "    \n",
     "    # Creamos una particion usando Validacion Bootstrap\n",
     "    n=10\n",
     "    validacion3 = ValidacionBootstrap(n)\n",
-    "    particion3 = validacion3(dataset)\n",
-    "    \n",
-    "    # Idea - sobrecargar metodo iterar en Validadores\n"
+    "    particion3 = validacion3(dataset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "class Clasificador:\n",
+    "  \n",
+    "    # Clase abstracta\n",
+    "    __metaclass__ = ABCMeta\n",
+    "\n",
+    "    # Metodos abstractos que se implementan en casa clasificador concreto\n",
+    "    @abstractmethod\n",
+    "    # TODO: esta funcion deben ser implementadas en cada clasificador concreto\n",
+    "    # datosTrain: matriz numpy con los datos de entrenamiento\n",
+    "    # atributosDiscretos: array bool con la indicatriz de los atributos nominales\n",
+    "    # diccionario: array de diccionarios de la estructura Datos utilizados para la codificacion\n",
+    "    # de variables discretas\n",
+    "    def entrenamiento(self,datosTrain,atributosDiscretos,diccionario):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    # TODO: esta funcion deben ser implementadas en cada clasificador concreto\n",
+    "    # devuelve un numpy array con las predicciones\n",
+    "    def clasifica(self,datosTest,atributosDiscretos,diccionario):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "    # Obtiene el numero de aciertos y errores para calcular la tasa de fallo\n",
+    "    # TODO: implementar\n",
+    "    def error(self,datos,pred):\n",
+    "    # Aqui se compara la prediccion (pred) con las clases reales y se calcula el error    \n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "    # Realiza una clasificacion utilizando una estrategia de particionado determinada\n",
+    "    # TODO: implementar esta funcion\n",
+    "    def validacion(self,particionado,dataset,clasificador,seed=None):\n",
+    "\n",
+    "    # Creamos las particiones siguiendo la estrategia llamando a particionado.creaParticiones\n",
+    "    # - Para validacion cruzada: en el bucle hasta nv entrenamos el clasificador con la particion de train i\n",
+    "    # y obtenemos el error en la particion de test i\n",
+    "    # - Para validacion simple (hold-out): entrenamos el clasificador con la particion de train\n",
+    "    # y obtenemos el error en la particion test\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "    ##############################################################################\n",
+    "\n",
+    "class ClasificadorNaiveBayes(Clasificador):\n",
+    "\n",
+    "\n",
+    "    def entrenamiento(self, datos, indices): \n",
+    "        #self.nAtributosDiscretos = sum(atributosDiscretos)-1\n",
+    "        # Numero de atributos discretos\n",
+    "        self.nAtributosDiscretos = len(datos.diccionarios)-1\n",
+    "        \n",
+    "        # Numero de clases (longitud del diccionario del campo clase)\n",
+    "        self.nClases = len(datos.diccionarios[-1])\n",
+    "        \n",
+    "        # Maximo tam de posibles valores de atributos nominales\n",
+    "        self.vAtributos = max([len(d) for d in datos.diccionarios[:-1]])\n",
+    "        \n",
+    "        # Tablas de probabilidad a posteriori\n",
+    "        print((self.nAtributosDiscretos,self.vAtributos, self.nClases))\n",
+    "        self.posteriori = np.zeros((self.nAtributosDiscretos,self.vAtributos, self.nClases))\n",
+    "\n",
+    "        # Iteramos sobre los datos de entrenamiento (sin contar la clase)\n",
+    "        for k, discreto in enumerate(datos.nominalAtributos[:-1]):\n",
+    "            if discreto:\n",
+    "                self._entrena_discreto(k, datos[:,k], datos[:,-1], datos.diccionarios[k], datos.nDatos)\n",
+    "            else:\n",
+    "                raise NotImplementedError\n",
+    "                \n",
+    "    def _entrena_discreto(self, k, datos, clase, diccionario, n):\n",
+    "        \n",
+    "        for c in range(self.nClases):\n",
+    "            \n",
+    "            repeticiones = collections.Counter(datos[clase == c])\n",
+    "            # laplace\n",
+    "            \n",
+    "            print([repeticiones[v for v in repeticiones])\n",
+    "            l=0\n",
+    "            \n",
+    "            for v in diccionario:\n",
+    "                atr = diccionario[v]\n",
+    "                self.posteriori[k][atr][c] = (l + repeticiones[atr]) / (n+l)\n",
+    "\n",
+    "    # TODO: implementar\n",
+    "    def clasifica(self,datostest,atributosDiscretos,diccionario):\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 2, 2)\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1]\n",
+      "[1, 0]\n",
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = Datos('../ConjuntosDatos/balloons.data')\n",
+    "\n",
+    "\n",
+    "c = ClasificadorNaiveBayes()\n",
+    "c.entrenamiento(dataset, range(len(dataset)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 6.  4.]\n",
+      "  [ 6.  4.]]\n",
+      "\n",
+      " [[ 6.  4.]\n",
+      "  [ 6.  4.]]\n",
+      "\n",
+      " [[ 8.  0.]\n",
+      "  [ 4.  8.]]\n",
+      "\n",
+      " [[ 4.  8.]\n",
+      "  [ 8.  0.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c.posteriori)"
    ]
   }
  ],
