--- a/Practica1/Practica1.ipynb
+++ b/Practica1/Practica1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -279,8 +279,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Prueba de los metodos de particiones de la semana1\n",
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,9 +365,11 @@
     "\n",
     "\n",
     "    def entrenamiento(self, datos, indices): \n",
-    "        #self.nAtributosDiscretos = sum(atributosDiscretos)-1\n",
+    "\n",
     "        # Numero de atributos discretos\n",
-    "        self.nAtributosDiscretos = len(datos.diccionarios)-1\n",
+    "        self.nAtributosDiscretos = sum(datos.nominalAtributos) - 1\n",
+    "        self.nAtributosContinuos = len(datos.diccionarios) - self.nAtributosDiscretos -1 \n",
+    "        \n",
     "        \n",
     "        # Numero de clases (longitud del diccionario del campo clase)\n",
     "        self.nClases = len(datos.diccionarios[-1])\n",
@@ -374,29 +378,52 @@
     "        self.vAtributos = max([len(d) for d in datos.diccionarios[:-1]])\n",
     "        \n",
     "        # Tablas de probabilidad a posteriori\n",
-    "        print((self.nAtributosDiscretos,self.vAtributos, self.nClases))\n",
+    "        \n",
     "        self.posteriori = np.zeros((self.nAtributosDiscretos,self.vAtributos, self.nClases))\n",
-    "\n",
+    "        self.gaussianas =  np.zeros((self.nAtributosContinuos,self.nClases, 2))\n",
+    "        # Mapeo entre indices reales y los indices de nuestras tablas\n",
+    "        self.indicesDiscretos = {}\n",
+    "        self.indicesContinuos = {}\n",
+    "        d_index = 0 # Cuenta de indices empleados discretos\n",
+    "        c_index = 0 # y continuos\n",
+    "        \n",
     "        # Iteramos sobre los datos de entrenamiento (sin contar la clase)\n",
     "        for k, discreto in enumerate(datos.nominalAtributos[:-1]):\n",
     "            if discreto:\n",
-    "                self._entrena_discreto(k, datos[:,k], datos[:,-1], datos.diccionarios[k], datos.nDatos)\n",
+    "                self.indicesDiscretos[k] = d_index\n",
+    "                self._entrena_discreto(d_index, datos[:,k], datos[:,-1], datos.diccionarios[k], datos.nDatos)\n",
+    "                d_index += 1\n",
     "            else:\n",
-    "                raise NotImplementedError\n",
+    "                self.indicesContinuos[k] = c_index\n",
+    "                 self._entrena_continuo(c_index, datos[:,k], datos[:,-1])\n",
+    "                \n",
+    "                c_index += 1\n",
+    "\n",
     "                \n",
     "    def _entrena_discreto(self, k, datos, clase, diccionario, n):\n",
     "        \n",
+    "        # Calculamos los conteos de atributos de cada clase\n",
+    "        repeticiones = np.empty(self.nClases, dtype=object)\n",
     "        for c in range(self.nClases):\n",
+    "            repeticiones[c] = collections.Counter(datos[clase == c])\n",
+    "\n",
     "            \n",
-    "            repeticiones = collections.Counter(datos[clase == c])\n",
-    "            # laplace\n",
-    "            \n",
-    "            print([repeticiones[v for v in repeticiones])\n",
-    "            l=0\n",
-    "            \n",
+    "        # Correccion de laplace\n",
+    "        laplace = any(np.array([len(r) for r in repeticiones]) != len(diccionario))\n",
+    "        l= 1 if laplace else 0\n",
+    "        \n",
+    "        for c in range(self.nClases):\n",
     "            for v in diccionario:\n",
     "                atr = diccionario[v]\n",
-    "                self.posteriori[k][atr][c] = (l + repeticiones[atr]) / (n+l)\n",
+    "                self.posteriori[k][atr][c] = (l + repeticiones[c][atr]) / (n+l)\n",
+    "                \n",
+    "    def _entrena_continuo(self, k, datos, clase):\n",
+    "        \n",
+    "        for c in range(self.nClases):\n",
+    "            data = datos[clase == c]\n",
+    "            self.gaussianas[k,c] np.mean(data)\n",
+    "            sd = np.std(data)\n",
+    "            \n",
     "\n",
     "    # TODO: implementar\n",
     "    def clasifica(self,datostest,atributosDiscretos,diccionario):\n",
@@ -405,27 +432,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 2, 2)\n",
-      "[1, 0]\n",
-      "[1, 0]\n",
-      "[1, 0]\n",
-      "[1, 0]\n",
-      "[1, 0]\n",
-      "[1]\n",
-      "[1, 0]\n",
-      "[0]\n"
+      "13 7\n"
+     ]
+    },
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-c22bb6e0c5e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mClasificadorNaiveBayes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mentrenamiento\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-66-69fe2dd021cf>\u001b[0m in \u001b[0;36mentrenamiento\u001b[0;34m(self, datos, indices)\u001b[0m\n\u001b[1;32m     82\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindicesContinuos\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc_index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m                 \u001b[0mc_index\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_entrena_discreto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclase\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiccionario\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "dataset = Datos('../ConjuntosDatos/balloons.data')\n",
+    "dataset = Datos('../ConjuntosDatos/german.data')\n",
     "\n",
     "\n",
     "c = ClasificadorNaiveBayes()\n",
@@ -434,24 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 6.  4.]\n",
-      "  [ 6.  4.]]\n",
+      "[[[ 0.3         0.2       ]\n",
+      "  [ 0.3         0.2       ]]\n",
       "\n",
-      " [[ 6.  4.]\n",
-      "  [ 6.  4.]]\n",
+      " [[ 0.3         0.2       ]\n",
+      "  [ 0.3         0.2       ]]\n",
       "\n",
-      " [[ 8.  0.]\n",
-      "  [ 4.  8.]]\n",
+      " [[ 0.42857143  0.04761905]\n",
+      "  [ 0.23809524  0.42857143]]\n",
       "\n",
-      " [[ 4.  8.]\n",
-      "  [ 8.  0.]]]\n"
+      " [[ 0.23809524  0.42857143]\n",
+      "  [ 0.42857143  0.04761905]]]\n"
      ]
     }
    ],
