--- a/Practica1/Practica1.ipynb
+++ b/Practica1/Practica1.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
     "                d_index += 1\n",
     "            else:\n",
     "                self.indicesContinuos[k] = c_index\n",
-    "                 self._entrena_continuo(c_index, datos[:,k], datos[:,-1])\n",
+    "                self._entrena_continuo(c_index, datos[:,k], datos[:,-1])\n",
     "                \n",
     "                c_index += 1\n",
     "\n",
@@ -421,40 +421,19 @@
     "        \n",
     "        for c in range(self.nClases):\n",
     "            data = datos[clase == c]\n",
-    "            self.gaussianas[k,c] np.mean(data)\n",
-    "            sd = np.std(data)\n",
+    "            self.gaussianas[k,c,0] = np.mean(data)\n",
+    "            self.gaussianas[k,c,1] = np.std(data)\n",
     "            \n",
     "\n",
-    "    # TODO: implementar\n",
-    "    def clasifica(self,datostest,atributosDiscretos,diccionario):\n",
+    "    def clasifica(self,datos, indices):\n",
     "        pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13 7\n"
-     ]
-    },
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-68-c22bb6e0c5e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mClasificadorNaiveBayes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mentrenamiento\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-66-69fe2dd021cf>\u001b[0m in \u001b[0;36mentrenamiento\u001b[0;34m(self, datos, indices)\u001b[0m\n\u001b[1;32m     82\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindicesContinuos\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc_index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m                 \u001b[0mc_index\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_entrena_discreto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclase\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiccionario\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = Datos('../ConjuntosDatos/german.data')\n",
     "\n",
@@ -465,29 +444,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 0.3         0.2       ]\n",
-      "  [ 0.3         0.2       ]]\n",
+      "[[[  1.92071429e+01   1.10716475e+01]\n",
+      "  [  2.48600000e+01   1.32604826e+01]]\n",
       "\n",
-      " [[ 0.3         0.2       ]\n",
-      "  [ 0.3         0.2       ]]\n",
+      " [[  2.98545714e+03   2.39975633e+03]\n",
+      "  [  3.93812667e+03   3.52992100e+03]]\n",
       "\n",
-      " [[ 0.42857143  0.04761905]\n",
-      "  [ 0.23809524  0.42857143]]\n",
+      " [[  2.92000000e+00   1.12727231e+00]\n",
+      "  [  3.09666667e+00   1.08657975e+00]]\n",
       "\n",
-      " [[ 0.23809524  0.42857143]\n",
-      "  [ 0.42857143  0.04761905]]]\n"
+      " [[  2.84285714e+00   1.10758056e+00]\n",
+      "  [  2.85000000e+00   1.09277933e+00]]\n",
+      "\n",
+      " [[  3.62242857e+01   1.13730124e+01]\n",
+      "  [  3.39633333e+01   1.12036596e+01]]\n",
+      "\n",
+      " [[  1.42428571e+00   5.84303178e-01]\n",
+      "  [  1.36666667e+00   5.58768487e-01]]\n",
+      "\n",
+      " [[  1.15571429e+00   3.62584262e-01]\n",
+      "  [  1.15333333e+00   3.60308510e-01]]]\n"
      ]
     }
    ],
    "source": [
-    "print(c.posteriori)"
+    "print(c.gaussianas)"
    ]
   }
  ],
