--- a/Practica1/Practica1.ipynb
+++ b/Practica1/Practica1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -22,12 +22,13 @@
     "#from sklearn import datasets\n",
     "import sklearn.naive_bayes as nb\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn import preprocessing "
+    "from sklearn import preprocessing\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, KFold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -143,10 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 172,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from abc import ABCMeta,abstractmethod\n",
@@ -280,6 +279,71 @@
     "\n",
     "            self.particiones.append(Particion(train, test))\n",
     "\n",
+    "        return self.particiones\n",
+    "    \n",
+    "#####################################################################################################\n",
+    "\n",
+    "    \n",
+    "class ValidacionSimpleScikit(EstrategiaParticionado):\n",
+    "    \"\"\"Crea particiones segun el metodo tradicional \n",
+    "    de division de los datos segun el porcentaje deseado.\"\"\"\n",
+    "    \n",
+    "    def __init__(self,porcentaje=.75):\n",
+    "\n",
+    "        self.porcentaje = porcentaje\n",
+    "        super().__init__(\"Validacion Simple Scikit con {}\\% de entrenamiento\".format(100*porcentaje))\n",
+    "\n",
+    "    def creaParticiones(self,datos,seed=None): \n",
+    "        \n",
+    "        #Primero encriptamos los atributos\n",
+    "        encAtributos = preprocessing.OneHotEncoder(categorical_features=datos.nominalAtributos[:-1], sparse=False)\n",
+    "        \n",
+    "        # Guardamos la matriz de atributos codificada\n",
+    "        X = encAtributos.fit_transform(dataset.datos[:,:-1])\n",
+    "        # Guardamos la clase de cada patron\n",
+    "        Y =dataset.datos[:,-1] \n",
+    "\n",
+    "        # Creamos Train y Test para atributos y clases (clases tb?)\n",
+    "        XTrain, XTest = train_test_split(X, train_size = self.porcentaje, shuffle=True)\n",
+    "        YTrain, YTest = train_test_split(Y, train_size = self.porcentaje, shuffle=True) #?\n",
+    "        \n",
+    "        self.particiones.append(Particion(XTrain, XTest))\n",
+    "        self.particiones.append(Particion(YTrain, YTest))\n",
+    "        \n",
+    "        return self.particiones\n",
+    "    \n",
+    "#####################################################################################################\n",
+    "\n",
+    "    \n",
+    "class ValidacionCruzadaScikit(EstrategiaParticionado):\n",
+    "    \"\"\"Crea particiones segun el metodo tradicional \n",
+    "    de division de los datos segun el porcentaje deseado.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, k=1):\n",
+    "        self.k = k\n",
+    "        super().__init__(\"Validacion Cruzada Scikit con {} particiones\".format(k))\n",
+    "\n",
+    "    def creaParticiones(self,datos,seed=None): \n",
+    "        \n",
+    "        self.numeroParticiones = self.k\n",
+    "        self.particiones = []\n",
+    "            \n",
+    "        #Primero encriptamos los atributos\n",
+    "        encAtributos = preprocessing.OneHotEncoder(categorical_features=datos.nominalAtributos[:-1], sparse=False)\n",
+    "        \n",
+    "        # Guardamos la matriz de atributos codificada\n",
+    "        X = encAtributos.fit_transform(dataset.datos[:,:-1])\n",
+    "        # Guardamos la clase de cada patron\n",
+    "        Y =dataset.datos[:,-1]    \n",
+    "\n",
+    "        # Creamos particiones\n",
+    "        kf = KFold(n_splits=self.k, shuffle=True)\n",
+    "        for train, test in kf.split(X, Y):\n",
+    "            XTrain, XTest = X[train], X[test]\n",
+    "            YTrain, YTest = Y[train], Y[test]\n",
+    "            self.particiones.append(Particion(XTrain, XTest))\n",
+    "            self.particiones.append(Particion(YTrain, YTest))\n",
+    "        \n",
     "        return self.particiones\n"
    ]
   },
@@ -316,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,8 +511,9 @@
     "        \n",
     "        for atr, nominal in enumerate(datos.nominalAtributos[:-1]): \n",
     "            if nominal:\n",
+    "                print(\"Es nominal: \", nominal)\n",
     "                index = self.indicesDiscretos[atr]\n",
-    "                print(\"Indice atributo\", index, \"valor\", dato[atr])\n",
+    "                print(\"Indice atributo\", index, \"valor\", dato[atr], \"clase\", clase)\n",
     "                prob *= self.posteriori[index,dato[atr],clase]\n",
     "                print(\"posteriori\", self.posteriori[index,dato[atr],clase])\n",
     "            else:\n",
@@ -486,19 +551,19 @@
     "\n",
     "class ScikitNaiveBayes(Clasificador):\n",
     "    \n",
-    "    def entrenamiento(self, datos, indices): \n",
-    "        \n",
+    "    def entrenamiento(self, datos, indices):\n",
+    "          \n",
     "        # Calculamos las posteriori de los discretos\n",
     "        self.NB = nb.MultinomialNB(alpha=1.0, fit_prior=True, class_prior=None)\n",
-    "        # Almacenamos el conjunto de datos\n",
-    "        X = np.array(datos)\n",
-    "        # Almacenamos índices para seleccionar tanda\n",
-    "        Y = [i for i in indices]\n",
-    "        self.NB.fit(X,Y)\n",
+    "        # Calculamos NaiveBayes\n",
+    "        self.NB.fit(indices[0], indices[1])\n",
+    "        # indices[0] contiene la particion de datos\n",
+    "        # indices[1] contiene la particion de clases (?) \n",
+    "        # y en el caso de val.cruzada?\n",
     "\n",
     "    def clasifica(self, datos, indices):\n",
     "        \n",
-    "        print(self.NB.predict())     \n",
+    "        print(self.NB.predict(indices[0]))     \n",
     "                \n",
     "    \n",
     "      "
@@ -506,127 +571,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Datos:  [[1 1 1 0 1]\n",
-      " [1 1 1 0 1]\n",
-      " [1 1 1 1 0]\n",
-      " [1 1 0 0 0]\n",
-      " [1 1 0 1 0]\n",
-      " [1 0 1 0 1]\n",
-      " [1 0 1 0 1]\n",
-      " [1 0 1 1 0]\n",
-      " [1 0 0 0 0]\n",
-      " [1 0 0 1 0]\n",
-      " [0 1 1 0 1]\n",
-      " [0 1 1 0 1]\n",
-      " [0 1 1 1 0]\n",
-      " [0 1 0 0 0]\n",
-      " [0 1 0 1 0]\n",
-      " [0 0 1 0 1]\n",
-      " [0 0 1 0 1]\n",
-      " [0 0 1 1 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 1 0]]\n",
-      "Indices:  [ 3  8  4 13]\n",
-      "Clasificando dato:  [1 1 0 0 0]\n",
-      " ~En la clase:  0  con a priori: [ 0.5 ]\n",
-      "Indice atributo 0 valor 1\n",
-      "posteriori 0.1875\n",
-      "Indice atributo 1 valor 1\n",
-      "posteriori 0.1875\n",
-      "Indice atributo 2 valor 0\n",
-      "posteriori 0.294117647059\n",
-      "Indice atributo 3 valor 0\n",
-      "posteriori 0.117647058824\n",
-      " ~En la clase:  1  con a priori: [ 0.5 ]\n",
-      "Indice atributo 0 valor 1\n",
-      "posteriori 0.25\n",
-      "Indice atributo 1 valor 1\n",
-      "posteriori 0.25\n",
-      "Indice atributo 2 valor 0\n",
-      "posteriori 0.0588235294118\n",
-      "Indice atributo 3 valor 0\n",
-      "posteriori 0.529411764706\n",
-      "Las probabilidades:  [ 0.00060824  0.00097318]\n",
-      "La mayor es:  1\n",
-      "\n",
-      "Clasificando dato:  [1 0 0 0 0]\n",
-      " ~En la clase:  0  con a priori: [ 0.5 ]\n",
-      "Indice atributo 0 valor 1\n",
-      "posteriori 0.1875\n",
-      "Indice atributo 1 valor 0\n",
-      "posteriori 0.3125\n",
-      "Indice atributo 2 valor 0\n",
-      "posteriori 0.294117647059\n",
-      "Indice atributo 3 valor 0\n",
-      "posteriori 0.117647058824\n",
-      " ~En la clase:  1  con a priori: [ 0.5 ]\n",
-      "Indice atributo 0 valor 1\n",
-      "posteriori 0.25\n",
-      "Indice atributo 1 valor 0\n",
-      "posteriori 0.25\n",
-      "Indice atributo 2 valor 0\n",
-      "posteriori 0.0588235294118\n",
-      "Indice atributo 3 valor 0\n",
-      "posteriori 0.529411764706\n",
-      "Las probabilidades:  [ 0.00101373  0.00097318]\n",
-      "La mayor es:  0\n",
-      "\n",
-      "Clasificando dato:  [1 1 0 1 0]\n",
-      " ~En la clase:  0  con a priori: [ 0.5 ]\n",
-      "Indice atributo 0 valor 1\n",
-      "posteriori 0.1875\n",
-      "Indice atributo 1 valor 1\n",
-      "posteriori 0.1875\n",
-      "Indice atributo 2 valor 0\n",
-      "posteriori 0.294117647059\n",
-      "Indice atributo 3 valor 1\n",
-      "posteriori 0.470588235294\n",
-      " ~En la clase:  1  con a priori: [ 0.5 ]\n",
-      "Indice atributo 0 valor 1\n",
-      "posteriori 0.25\n",
-      "Indice atributo 1 valor 1\n",
-      "posteriori 0.25\n",
-      "Indice atributo 2 valor 0\n",
-      "posteriori 0.0588235294118\n",
-      "Indice atributo 3 valor 1\n",
-      "posteriori 0.0588235294118\n",
-      "Las probabilidades:  [ 0.00243296  0.00010813]\n",
-      "La mayor es:  0\n",
-      "\n",
-      "Clasificando dato:  [0 1 0 0 0]\n",
-      " ~En la clase:  0  con a priori: [ 0.5 ]\n",
-      "Indice atributo 0 valor 0\n",
-      "posteriori 0.3125\n",
-      "Indice atributo 1 valor 1\n",
-      "posteriori 0.1875\n",
-      "Indice atributo 2 valor 0\n",
-      "posteriori 0.294117647059\n",
-      "Indice atributo 3 valor 0\n",
-      "posteriori 0.117647058824\n",
-      " ~En la clase:  1  con a priori: [ 0.5 ]\n",
-      "Indice atributo 0 valor 0\n",
-      "posteriori 0.25\n",
-      "Indice atributo 1 valor 1\n",
-      "posteriori 0.25\n",
-      "Indice atributo 2 valor 0\n",
-      "posteriori 0.0588235294118\n",
-      "Indice atributo 3 valor 0\n",
-      "posteriori 0.529411764706\n",
-      "Las probabilidades:  [ 0.00101373  0.00097318]\n",
-      "La mayor es:  0\n",
-      "\n",
-      "CLASIFICACION:  [1 0 0 0]\n",
-      "[[1 1 0 0 0]\n",
-      " [1 0 0 0 0]\n",
-      " [1 1 0 1 0]\n",
-      " [0 1 0 0 0]]\n"
+      "[0 1 0 1 0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3.5/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
      ]
     }
    ],
@@ -634,43 +594,42 @@
     "dataset = Datos('../ConjuntosDatos/balloons.data')\n",
     "\n",
     "# Creamos particion\n",
-    "validacion1 = ValidacionSimple(0.8)\n",
-    "particion1 = validacion1(dataset)\n",
-    "\n",
-    "print(\"Datos: \", dataset.datos)\n",
-    "print(\"Indices: \", particion1[0].indicesTest)\n",
+    "#validacion1 = ValidacionSimple(0.8)\n",
+    "#particion1 = validacion1(dataset)\n",
     "\n",
     "# Creamos clasificador Naive-Bayes\n",
-    "c = ClasificadorNaiveBayes()\n",
-    "c.entrenamiento(dataset, particion1[0].indicesTrain)\n",
-    "clasificacion = c.clasifica(dataset, particion1[0].indicesTest)\n",
-    "print(dataset[particion1[0].indicesTest])\n",
+    "#c = ClasificadorNaiveBayes()\n",
+    "#c.entrenamiento(dataset, particion1[0].indicesTrain)\n",
+    "#clasificacion = c.clasifica(dataset, particion1[0].indicesTest)\n",
+    "#print(dataset[particion1[0].indicesTest])\n",
     "#clasificacion = c.clasifica(dataset, range(len(dataset)))\n",
     "\n",
-    "#c = ScikitNaiveBayes()\n",
-    "#c.entrenamiento(dataset, range(len(dataset)))"
+    "# Particion por validacion simple scikit\n",
+    "validacion1 = ValidacionSimpleScikit(0.8)\n",
+    "particion1 = validacion1(dataset)\n",
+    "#Particion por validacion cruzada scikit\n",
+    "validacion2 = ValidacionCruzadaScikit(4)\n",
+    "particion2 = validacion2(dataset)\n",
+    "\n",
+    "c = ScikitNaiveBayes()\n",
+    "c.entrenamiento(dataset, [particion2[0].indicesTrain, particion2[1].indicesTrain])\n",
+    "c.clasifica(dataset, [particion2[0].indicesTest])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 0.3125      0.1875    ]\n",
-      "  [ 0.25        0.25      ]]\n",
-      "\n",
-      " [[ 0.3125      0.1875    ]\n",
-      "  [ 0.25        0.25      ]]\n",
-      "\n",
-      " [[ 0.41176471  0.05882353]\n",
-      "  [ 0.23529412  0.47058824]]\n",
-      "\n",
-      " [[ 0.29411765  0.47058824]\n",
-      "  [ 0.35294118  0.05882353]]]\n"
+     "ename": "AttributeError",
+     "evalue": "'ScikitNaiveBayes' object has no attribute 'posteriori'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-130-098c9372cd59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#print(c.gaussianas)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposteriori\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ScikitNaiveBayes' object has no attribute 'posteriori'"
      ]
     }
    ],
