Tal cual entregado

--- a/Practica3/Practica3.ipynb
+++ b/Practica3/Practica3.ipynb
@@ -167,7 +167,9 @@
     "\n",
     "A continuación se muestra el resultado del entrenamiento para el ejemplo2.\n",
     "Debido a que se trata del problema xor el cromosoma ganador es el resultante de elegir una de las esquinas como \n",
-    "frontera de decisión, pudiendo clasificar de está forma 3/"
+    "frontera de decisión, pudiendo clasificar de está forma 3/4 de nuestra población correctamente.\n",
+    "\n",
+    "Se obtienen resultados similares para los ejemplos 1 y 3."
    ]
   },
   {
